<resources>
    <string name="app_name">互译系统</string>
    <string name="trans_record">翻译记录</string>
    <string name="trans_main">翻译主页</string>
    <string name="translating">翻译中</string>
    <string name="touch_start_trans">点击开始翻译</string>
    <string name="touch_select_trans">请选择语言</string>
    <string name="setting_text_size">字体设置</string>
    <string name="setting_text_size_min">较小</string>
    <string name="setting_text_size_nor">正常</string>
    <string name="setting_text_size_max">较大</string>
    <string name="setting_display">屏幕设置</string>
    <string name="setting_display_same">双屏同显</string>
    <string name="setting_display_more">双屏异显</string>
    <string name="setting_text_play">文本播放设置</string>
    <string name="setting_text_play_open">启用</string>
    <string name="setting_text_play_close">禁用</string>
    <string name="setting_trans_record">翻译记录</string>
    <string name="language_zn">中文</string>

    <string-array name="lang_an_array">
        <item>英文</item>
        <item>法语</item>
    </string-array>
    <string-array name="lang_more_array">
        <item>English</item>
        <item>Francais</item>
    </string-array>
    <string-array name="lang_ex_array">
        <item>en</item>
        <item>fr</item>
    </string-array>


    <string name="format_12_hour">yyyy/MM/ddEEEE</string>
</resources>
