<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_trans_main"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/navigation_trans_main"
        android:name="com.sc.tmp_translate.view.TransMainFragment"
        android:label="@string/trans_main"
        tools:layout="@layout/fragment_trans_main" />

    <fragment
        android:id="@+id/navigation_trans_record"
        android:name="com.sc.tmp_translate.view.TransRecordFragment"
        android:label="@string/trans_record"
        tools:layout="@layout/fragment_trans_record" />

    <fragment
        android:id="@+id/navigation_translating"
        android:name="com.sc.tmp_translate.view.TranslatingFragment"
        android:label="@string/translating"
        tools:layout="@layout/fragment_translating" />

    <fragment
        android:id="@+id/navigation_translating_od"
        android:name="com.sc.tmp_translate.view.TranslatingODFragment"
        android:label="@string/translating"
        tools:layout="@layout/fragment_translating_od" />

</navigation>
