<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
                name="vm"
                type="com.sc.tmp_translate.vm.TransMainViewModel"/>
        <variable
                name="tmp"
                type="com.sc.tmp_translate.inter.ITmpService"/>
        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            >

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/trans_ly"
                android:background="@color/red"
                android:visibility="@{vm.translatingObs ? View.VISIBLE : View.GONE}"
                >

            <ImageView style="@style/back_btn_style"
                       android:id="@+id/back_btn"
                       app:layout_constraintStart_toStartOf="parent"
                       app:layout_constraintTop_toTopOf="parent"
                       android:onClick="@{vm.quitTrans}"
                    />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/select_ly"
                android:visibility="@{vm.translatingObs ? View.GONE : View.VISIBLE}"
                android:background="@color/bg_color"
                >

            <TextView style="@style/lang_select_text_style"
                      android:id="@+id/select_tv"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintTop_toTopOf="parent"
                      android:text="@string/touch_select_trans"
                    />

            <ImageView style="@style/bottom_trans_img_style"
                       android:id="@+id/trans_iv"
                       app:layout_constraintStart_toStartOf="parent"
                       app:layout_constraintEnd_toEndOf="parent"
                       app:layout_constraintTop_toBottomOf="@+id/select_tv"
                       android:onClick="@{vm.startTrans}"
                    />

            <TextView style="@style/lang_lr_text_style"
                      android:id="@+id/left_lang_tv"
                      app:layout_constraintEnd_toStartOf="@+id/trans_iv"
                      app:layout_constraintTop_toTopOf="@+id/trans_iv"
                      app:layout_constraintBottom_toBottomOf="@+id/trans_iv"
                      android:text="@string/language_zn"
                    />

            <TextView style="@style/lang_lr_text_style"
                      android:id="@+id/right_lang_tv"
                      app:layout_constraintStart_toEndOf="@+id/trans_iv"
                      app:layout_constraintTop_toTopOf="@+id/trans_iv"
                      app:layout_constraintBottom_toBottomOf="@+id/trans_iv"
                      android:text="@{tmp.transLangObs}"
                    />

            <Spinner style="@style/lang_lr_text_style"
                     android:id="@+id/right_lang_sp"
                     app:layout_constraintStart_toStartOf="@+id/right_lang_tv"
                     app:layout_constraintTop_toTopOf="@+id/right_lang_tv"
                     app:layout_constraintBottom_toBottomOf="@+id/right_lang_tv"
                     android:layout_marginStart="0dp"
                     android:layout_marginEnd="0dp"
                     android:spinnerMode="dropdown"
                    />

            <ImageView style="@style/bottom_tip_img_style"
                       android:id="@+id/mic_btn"
                       app:layout_constraintStart_toStartOf="parent"
                       app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                       android:onClick="@{vm.startTrans}"
                    />

            <TextView style="@style/bottom_start_text_style"
                      android:id="@+id/tran_tv"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintBottom_toTopOf="@+id/mic_btn"
                      android:text="@string/touch_start_trans"
                      android:onClick="@{vm.startTrans}"
                    />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
